# SkyrimNet-Animations-GS

./: .gitignore  CHANGELOG.md  README.md  SkyrimNet_AnimationsGS.esp
PrismaUI/views/GSAnim_Menu/: index.html  poses.js
PrismaUI/views/GSAnim_Menu/images/: README.txt
SKSE/Plugins/SkyrimNet/config/actions/: command_stop_pose.yaml  pose_dance.yaml  pose_dance_sexy.yaml  pose_ground_idle.yaml  pose_ground_sexy.yaml  pose_idle.yaml  pose_plead.yaml  pose_present.yaml  pose_seduce.yaml  pose_selftouch.yaml  pose_stretch.yaml  pose_submission.yaml  pose_workout.yaml  stop_posing.yaml
Scripts/: SNAnimGSUI.pex  SkyrimNet_AnimGS_Power.pex  SkyrimNet_AnimationsGS.pex
Scripts/Source/: SNAnimGSUI.psc  SkyrimNet_AnimGS_Power.psc  SkyrimNet_AnimationsGS.psc
dll-source/: CMakeLists.txt  vcpkg.json
dll-source/src/: PapyrusFunctions.cpp  PapyrusFunctions.h  Plugin.cpp  PrismaUIBridge.cpp  PrismaUIBridge.h
